--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
 
   <!-- SCRIPT FOR GALLERIA -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
